--- a/src/index.css
+++ b/src/index.css
@@ -8,35 +8,51 @@
   }
 }
 
-input[type="range"] {
-  -webkit-appearance: none;
+#slider {
   appearance: none;
-  background: transparent;
+  width: 100%;
+  height: 7px;
+  outline: none;
+  border-radius: 3px;
+}
+
+#slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 48px;
+  height: 48px;
   cursor: pointer;
-  width: 42rem;
-  height: 1rem;
+  z-index: 3;
+  position: relative;
+  /* background-color: red;
+  border-radius: 50%; */
 }
 
-input[type="range"]::-webkit-slider-runnable-track {
-  background: white;
-  height: 1.5rem;
-  border-radius: 10px;
-  border: 1px solid grey;
-  
+#selector {
+  height: 104px;
+  width: 48px;
+  position: absolute;
+  bottom: -20px;
+  z-index: 2;
 }
 
-input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  margin-top: -0.3rem; 
+#button {
+  height: 48px;
+  width: 48px;
   background-color: purple;
-  height: 2rem;
-  width: 2rem;    
-  border-radius: 100%;
-  border: white solid 4px;
+  border-radius: 50%;
+  border: 2px solid white;
+  position:absolute;
+  bottom: 10px;
 }
 
-input[type="range"]::-webkit-slider-thumb:before{
-  color: black;
-  content: "foo"
+#progress{
+  width: 50%;
+  height: 32px;
+  background: purple;
+  border-radius: 3px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top:-5px;
+  margin-left: 20px;
 }
