--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,14 @@
 #slider {
   appearance: none;
   width: 100%;
-  height: 7px;
+  height: 32px;
   outline: none;
   border-radius: 3px;
+  position: absolute;
+  top: -3px;
+  background-color: rgba(173, 53, 53, 0.336);
+  background-color: transparent;
+  z-index: 40;
 }
 
 #slider::-webkit-slider-thumb {
@@ -21,60 +26,8 @@
   width: 48px;
   height: 48px;
   cursor: pointer;
-  z-index: 3;
+  z-index: 42;
   position: relative;
   /* background-color: red;
   border-radius: 50%; */
-}
-
-#selector {
-  height: 104px;
-  width: 48px;
-  position: absolute;
-  bottom: -20px;
-  z-index: 2;
-}
-
-#button {
-  height: 48px;
-  width: 48px;
-  background-color: purple;
-  border-radius: 50%;
-  border: 2px solid white;
-  position:absolute;
-  bottom: 10px;
-}
-
-#progress{
-  width: 0%;
-  height: 32px;
-  background: purple;
-  border-radius: 3px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-top:-5px;
-  margin-left: 20px;
-  border-radius: 16px 0 0 16px;
-  text-align: right;
-  color: white;
-  padding-right: 40px;
-  padding-top: 4px;
-  z-index: 1;
-}
-
-#background {
-  border: 1px solid black;
-  height: 32px;
-  border-radius: 16px;
-  position: absolute;
-  top: -4px;
-  left: 0;
-  width: 96%;
-  margin-left: 20px;
-  margin-right: 148px;
-  text-align: right;
-  color: black;
-  padding-right: 30px;
-  padding-top: 3px;
 }
