--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   }
 }
 
-#slider {
+.slider {
   appearance: none;
   width: 100%;
   height: 32px;
@@ -20,7 +20,7 @@
   z-index: 40;
 }
 
-#slider::-webkit-slider-thumb {
+.slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 48px;
   height: 48px;
