Adds firefox defaults

--- a/src/index.css
+++ b/src/index.css
@@ -20,13 +20,14 @@
   z-index: 40;
 }
 
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
+.slider::-webkit-slider-thumb, .slider::-moz-range-thumb {
+  appearance: none;
   width: 48px;
   height: 48px;
   cursor: pointer;
   z-index: 42;
   position: relative;
+  border: none;
   border-radius: 50%;
   background-color: red;
   background-color: transparent;
