--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   }
 }
 
-.slider {
+input[type=range] {
   appearance: none;
   width: 100%;
   height: 32px;
@@ -20,8 +20,22 @@
   z-index: 40;
 }
 
-.slider::-webkit-slider-thumb, .slider::-moz-range-thumb {
+::-webkit-slider-thumb {
   appearance: none;
+  width: 48px;
+  height: 48px;
+  cursor: pointer;
+  z-index: 42;
+  position: relative;
+  border: none;
+  border-radius: 50%;
+  background-color: red;
+  background-color: transparent;
+}
+
+::-moz-range-thumb{
+  background: none;
+  border: none;
   width: 48px;
   height: 48px;
   cursor: pointer;
