--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ input[type=range] {
   border-radius: 50%;
   background-color: red;
   background-color: transparent;
+  box-shadow: none;
 }
 
 ::-moz-range-thumb{
